Database updates for base weapons, changes to tilesets, new shop map partially completed, and many other small updates.

--- a/Game.ini
+++ b/Game.ini
@@ -2,6 +2,6 @@
 RTP=RPGVXAce
 Library=System\RGSS301.dll
 Scripts=Data\Scripts.rvdata2
-Title=Boutalles+
+Title=Recondite: The Phantasm Emporium
 Description=(no description)
 CreationDate=1507966335
